manifestos/feed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feed-service
  template:
    metadata:
      labels:
        app: feed-service
    spec:
      containers:
      - name: feed-service
        image: "valdyrtorres/feed-service:v1.0"
        ports:
        - containerPort: 3000
