manifestos/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: namespace-bp
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 8037
      targetPort: 8037
