manifestos/feed-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feed-service
spec:
  selector:
    app: feed
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
