manifestos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bp-ingress
  namespace: namespace-bp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: auth-bp-host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8037
    - host: feed-bp-host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: feed-service
                port:
                  number: 3000
